Attempt #4 to fix pop-up docking on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -404,4 +404,8 @@ nav > a {
 	#contact {
 		margin-bottom:10px;
 	}
+	
+	.esri-popup__main-container {
+		width:100%;
+	}
 }
